# MCP-SERVER-EMAIL-

./: .env.example  .gitignore  README.md  claude_desktop_config.json  claude_desktop_config_example.json  pyproject.toml
src/: server.py
src/mcp_server_email_/: gmail_client.py  server.py
