[project]
name = "mcp-server-email-"
version = "0.1.0"
description = ""
authors = [
    {name = "rubyimogenjohnson",email = "ucfnrjo@ucl.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "mcp_server_email_", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
